syntax = "proto3";

import "google/protobuf/empty.proto";

service ClientServerProto {
  rpc getAllStudentData(google.protobuf.Empty) returns (StudentList);
  rpc getAllCourseData(google.protobuf.Empty) returns (CourseList);
}

message Student {
  string id = 1;
  string name = 2;
  string department = 3;
  repeated string completedCourseList = 4;
}

message Course {
  string id = 1;
  string profName = 2;
  string courseName = 3;
  repeated string prerequisite = 4;
}

message StudentList {
  string status = 1;
  repeated Student student = 2;
}

message CourseList {
  string status = 1;
  repeated Course course = 2;
}